--- a/package.json
+++ b/package.json
@@ -10,12 +10,16 @@
     "eject": "expo eject"
   },
   "dependencies": {
+    "axios": "^0.24.0",
+    "dotenv": "^10.0.0",
     "expo": "~44.0.0",
+    "expo-constants": "~13.0.0",
     "expo-status-bar": "~1.2.0",
     "react": "17.0.1",
     "react-dom": "17.0.1",
     "react-native": "0.64.3",
-    "react-native-web": "0.17.1"
+    "react-native-web": "0.17.1",
+    "react-query": "^3.34.7"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9",
