--- a/package.json
+++ b/package.json
@@ -20,7 +20,10 @@
     "react-dom": "17.0.1",
     "react-native": "0.64.3",
     "react-native-web": "0.17.1",
-    "react-query": "^3.34.7"
+    "react-query": "^3.34.7",
+    "expo-auth-session": "~3.5.0",
+    "expo-random": "~12.1.1",
+    "expo-application": "~4.0.1"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9",
