--- a/package.json
+++ b/package.json
@@ -15,11 +15,15 @@
     "expo": "~44.0.0",
     "expo-constants": "~13.0.0",
     "expo-status-bar": "~1.2.0",
+    "firebase": "^9.6.1",
     "react": "17.0.1",
     "react-dom": "17.0.1",
     "react-native": "0.64.3",
     "react-native-web": "0.17.1",
-    "react-query": "^3.34.7"
+    "react-query": "^3.34.7",
+    "expo-auth-session": "~3.5.0",
+    "expo-random": "~12.1.1",
+    "expo-application": "~4.0.1"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9",
@@ -29,6 +33,7 @@
     "@typescript-eslint/parser": "^5.8.1",
     "eslint": "^8.5.0",
     "eslint-config-airbnb": "^19.0.4",
+    "eslint-config-airbnb-typescript": "^16.1.0",
     "eslint-config-prettier": "^8.3.0",
     "eslint-plugin-import": "^2.25.3",
     "eslint-plugin-jsx-a11y": "^6.5.1",
