--- a/package.json
+++ b/package.json
@@ -10,20 +10,21 @@
     "eject": "expo eject"
   },
   "dependencies": {
+    "@expo/config": "^6.0.15",
     "axios": "^0.24.0",
     "dotenv": "^10.0.0",
     "expo": "~44.0.0",
+    "expo-application": "~4.0.1",
+    "expo-auth-session": "~3.5.0",
     "expo-constants": "~13.0.0",
+    "expo-random": "~12.1.1",
     "expo-status-bar": "~1.2.0",
     "firebase": "^9.6.1",
     "react": "17.0.1",
     "react-dom": "17.0.1",
     "react-native": "0.64.3",
     "react-native-web": "0.17.1",
-    "react-query": "^3.34.7",
-    "expo-auth-session": "~3.5.0",
-    "expo-random": "~12.1.1",
-    "expo-application": "~4.0.1"
+    "react-query": "^3.34.7"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9",
