--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@expo/config": "^6.0.15",
+    "@expo/vector-icons": "^12.0.5",
     "axios": "^0.24.0",
     "dotenv": "^10.0.0",
     "expo": "~44.0.0",
