--- a/package.json
+++ b/package.json
@@ -25,9 +25,9 @@
     "react-dom": "17.0.1",
     "react-native": "0.64.3",
     "react-native-elements": "^3.4.2",
+    "react-native-safe-area-context": "3.3.2",
     "react-native-web": "0.17.1",
-    "react-query": "^3.34.7",
-    "react-native-safe-area-context": "3.3.2"
+    "react-query": "^3.34.7"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9",
