--- a/.github/workflows/expo-publish.yml
+++ b/.github/workflows/expo-publish.yml
@@ -19,3 +19,9 @@ jobs:
           token: ${{ secrets.EXPO_TOKEN }}
       - run: npm install
       - run: expo publish
+        env:
+          EXPO_CLIENT_ID: ${{ secrets.EXPO_CLIENT_ID }}
+          ANDROID_CLIENT_ID: ${{ secrets.ANDROID_CLIENT_ID }}
+          IOS_CLIENT_ID: ${{ secrets.IOS_CLIENT_ID }}
+          WEB_CLIENT_ID: ${{ secrets.WEB_CLIENT_ID }}
+          API_BASE_URL: ${{ secrets.API_BASE_URL }}
