--- a/.github/workflows/expo-publish.yml
+++ b/.github/workflows/expo-publish.yml
@@ -7,6 +7,7 @@ jobs:
   publish:
     name: Install and publish
     runs-on: ubuntu-latest
+    environment: dev
     steps:
       - uses: actions/checkout@v2
       - uses: actions/setup-node@v2
