--- a/.github/workflows/expo-review.yml
+++ b/.github/workflows/expo-review.yml
@@ -4,6 +4,7 @@ jobs:
   publish:
     name: Install and publish
     runs-on: ubuntu-latest
+    environment: dev
     steps:
       - uses: actions/checkout@v2
       - uses: actions/setup-node@v2
