--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -20,6 +20,7 @@
     "react/require-default-props": "off",
     "react/style-prop-object": "off",
     "import/prefer-default-export": "off",
+    "no-nested-ternary": "off",
     "prettier/prettier": [
       "error",
       {
