--- a/.github/workflows/eas-build-dev.yml
+++ b/.github/workflows/eas-build-dev.yml
@@ -1,23 +1,34 @@
-name: Expo Review
+name: EAS Build Dev APK
 on: [pull_request]
+
 jobs:
-  publish:
-    name: Install and publish
+  build:
+    name: Install and build development profile
     runs-on: ubuntu-latest
     environment: dev
+
     steps:
-      - uses: actions/checkout@v2
-      - uses: actions/setup-node@v2
+      - name: Checkout
+        uses: actions/checkout@v2
+
+      - name: Setup Node.js
+        uses: actions/setup-node@v1
         with:
-          node-version: 14.x
-      - uses: expo/expo-github-action@v6
+          node-version: 16.x
+
+      - name: Setup Expo
+        uses: expo/expo-github-action@v5
         with:
           expo-version: 4.x
-          token: ${{ secrets.EXPO_TOKEN }}
-      - run: npm install
-      - run: expo publish --release-channel=pr-${{ github.event.number }}
+          expo-token: ${{ secrets.EXPO_TOKEN }}
+          expo-cache: true
+
+      - name: Install dependencies
+        run: npm ci
+
+      - name: Build on EAS
+        run: npx eas-cli build --platform android --non-interactive
         env:
-          EXPO_CLIENT_ID: ${{ secrets.EXPO_CLIENT_ID }}
           ANDROID_CLIENT_ID: ${{ secrets.ANDROID_CLIENT_ID }}
           IOS_CLIENT_ID: ${{ secrets.IOS_CLIENT_ID }}
           API_BASE_URL: ${{ secrets.API_BASE_URL }}
@@ -28,8 +39,3 @@ jobs:
           FIREBASE_MESSAGING_SENDER_ID: ${{ secrets.FIREBASE_MESSAGING_SENDER_ID }}
           FIREBASE_APP_ID: ${{ secrets.FIREBASE_APP_ID }}
           FIREBASE_MEASUREMENT_ID: ${{ secrets.FIREBASE_MEASUREMENT_ID }}
-      - uses: unsplash/comment-on-pr@master
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-        with:
-          msg: App is ready for review, you can [see it here](https://expo.dev/@san-diego-hanbit-church/directory-mobile?release-channel=pr-${{ github.event.number }}).
