--- a/package.json
+++ b/package.json
@@ -27,7 +27,10 @@
     "react-native-elements": "^3.4.2",
     "react-native-safe-area-context": "3.3.2",
     "react-native-web": "0.17.1",
-    "react-query": "^3.34.7"
+    "react-query": "^3.34.7",
+    "expo-dev-client": "~0.8.0",
+    "expo-google-app-auth": "~8.3.0",
+    "expo-google-sign-in": "~10.1.0"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9",
