--- a/.github/workflows/expo-review.yml
+++ b/.github/workflows/expo-review.yml
@@ -18,7 +18,8 @@ jobs:
       - run: expo publish --release-channel=pr-${{ github.event.number }}
         env:
           EXPO_CLIENT_ID: ${{ secrets.EXPO_CLIENT_ID }}
-          ANDROID_CLIENT_ID: ${{ secrets.ANDROID_CLIENT_ID }}
+          ANDROID_OAUTH_CLIENT_ID: ${{ secrets.ANDROID_OAUTH_CLIENT_ID }}
+          ANDROID_GOOGLE_API_KEY: ${{ secrets.ANDROID_GOOGLE_API_KEY }}
           IOS_CLIENT_ID: ${{ secrets.IOS_CLIENT_ID }}
           API_BASE_URL: ${{ secrets.API_BASE_URL }}
           FIREBASE_API_KEY: ${{ secrets.FIREBASE_API_KEY }}
