--- a/eas.json
+++ b/eas.json
@@ -14,7 +14,9 @@
     "preview": {
       "distribution": "internal"
     },
-    "production": {}
+    "production": {
+      "env": {}
+    }
   },
   "submit": {
     "production": {}
