--- a/.github/workflows/eas-build-dev.yml
+++ b/.github/workflows/eas-build-dev.yml
@@ -26,84 +26,91 @@ jobs:
       - name: Install dependencies
         run: npm ci
 
-      - name: Update eas.json
+      - name: Update eas.json ANDROID_OAUTH_CLIENT_ID
         uses: jossef/action-set-json-field@v1
         with:
           file: eas.json
           field: build.development.env.ANDROID_OAUTH_CLIENT_ID
           value: ${{ secrets.ANDROID_OAUTH_CLIENT_ID }}
 
-      - name: Update eas.json
+      - name: Update eas.json IOS_OAUTH_CLIENT_ID
         uses: jossef/action-set-json-field@v1
         with:
           file: eas.json
           field: build.development.env.IOS_OAUTH_CLIENT_ID
           value: ${{ secrets.IOS_OAUTH_CLIENT_ID }}
 
-      - name: Update eas.json
+      - name: Update eas.json ANDROID_GOOGLE_API_KEY
         uses: jossef/action-set-json-field@v1
         with:
           file: eas.json
           field: build.development.env.ANDROID_GOOGLE_API_KEY
           value: ${{ secrets.ANDROID_GOOGLE_API_KEY }}
 
-      - name: Update eas.json
+      - name: Update eas.json IOS_GOOGLE_API_KEY
         uses: jossef/action-set-json-field@v1
         with:
           file: eas.json
           field: build.development.env.IOS_GOOGLE_API_KEY
           value: ${{ secrets.IOS_GOOGLE_API_KEY }}
 
-      - name: Update eas.json
+      - name: Update eas.json IOS_URL_SCHEME
+        uses: jossef/action-set-json-field@v1
+        with:
+          file: eas.json
+          field: build.development.env.IOS_URL_SCHEME
+          value: ${{ secrets.IOS_URL_SCHEME }}
+
+      - name: Update eas.json FIREBASE_API_KEY
         uses: jossef/action-set-json-field@v1
         with:
           file: eas.json
           field: build.development.env.FIREBASE_API_KEY
           value: ${{ secrets.FIREBASE_API_KEY }}
 
-      - name: Update eas.json
+      - name: Update eas.json FIREBASE_AUTH_DOMAIN
         uses: jossef/action-set-json-field@v1
         with:
           file: eas.json
           field: build.development.env.FIREBASE_AUTH_DOMAIN
           value: ${{ secrets.FIREBASE_AUTH_DOMAIN }}
 
-      - name: Update eas.json
+      - name: Update eas.json FIREBASE_PROJECT_ID
         uses: jossef/action-set-json-field@v1
         with:
           file: eas.json
           field: build.development.env.FIREBASE_PROJECT_ID
           value: ${{ secrets.FIREBASE_PROJECT_ID }}
 
-      - name: Update eas.json
+      - name: Update eas.json FIREBASE_APP_ID
         uses: jossef/action-set-json-field@v1
         with:
           file: eas.json
           field: build.development.env.FIREBASE_APP_ID
           value: ${{ secrets.FIREBASE_APP_ID }}
 
-      - name: Update eas.json
+      - name: Update eas.json FIREBASE_STORAGE_BUCKET
         uses: jossef/action-set-json-field@v1
         with:
           file: eas.json
           field: build.development.env.FIREBASE_STORAGE_BUCKET
           value: ${{ secrets.FIREBASE_STORAGE_BUCKET }}
 
-      - name: Update eas.json
+      - name: Update eas.json FIREBASE_MESSAGING_SENDER_ID
         uses: jossef/action-set-json-field@v1
         with:
           file: eas.json
           field: build.development.env.FIREBASE_MESSAGING_SENDER_ID
           value: ${{ secrets.FIREBASE_MESSAGING_SENDER_ID }}
 
-      - name: Update eas.json
+      - name: Update eas.json FIREBASE_MEASUREMENT_ID
         uses: jossef/action-set-json-field@v1
         with:
           file: eas.json
           field: build.development.env.FIREBASE_MEASUREMENT_ID
           value: ${{ secrets.FIREBASE_MEASUREMENT_ID }}
 
-      - name: Update eas.json
+      - name: Update eas.json API_BASE_URL
         uses: jossef/action-set-json-field@v1
         with:
           file: eas.json
