temporarily changed to on pull_request to get first android build submitted

--- a/.github/workflows/build-and-submit.yml
+++ b/.github/workflows/build-and-submit.yml
@@ -1,8 +1,5 @@
 name: Build and Submit for Production
-on:
-  push:
-    branches:
-      - main
+on: [pull_request]
 jobs:
   build:
     name: Install and build production profile
