fixed bug in eas.json and changed to run publish and build in parallel

--- a/eas.json
+++ b/eas.json
@@ -11,11 +11,7 @@
         "gradleCommand": ":app:assembleRelease"
       }
     },
-    "production": {
-      "android": {
-        "track": "production"
-      }
-    }
+    "production": {}
   },
   "submit": {
     "production": {
