--- a/eas.json
+++ b/eas.json
@@ -14,10 +14,6 @@
     "production": {}
   },
   "submit": {
-    "production": {
-      "android": {
-        "track": "production"
-      }
-    }
+    "production": {}
   }
 }
