--- a/.github/workflows/publish-and-build-dev.yml
+++ b/.github/workflows/publish-and-build-dev.yml
@@ -6,16 +6,21 @@ jobs:
     runs-on: ubuntu-latest
     environment: dev
     steps:
-      - uses: actions/checkout@v2
-      - uses: actions/setup-node@v2
+      - name: Setup repo
+        uses: actions/checkout@v2
+      - name: Setup Node
+        uses: actions/setup-node@v2
         with:
-          node-version: 14.x
-      - uses: expo/expo-github-action@v6
+          node-version: 16.x
+      - name: Setup Expo
+        uses: expo/expo-github-action@v7
         with:
-          expo-version: 4.x
+          expo-version: 5.x
           token: ${{ secrets.EXPO_TOKEN }}
-      - run: npm install
-      - run: expo publish --release-channel=pr-${{ github.event.number }}
+      - name: Install dependencies
+        run: npm ci
+      - name: Publish to Expo release channel
+        run: expo publish --release-channel=pr-${{ github.event.number }}
         env:
           EXPO_OAUTH_CLIENT_ID: ${{ secrets.EXPO_OAUTH_CLIENT_ID }}
           API_BASE_URL: ${{ secrets.API_BASE_URL }}
@@ -26,7 +31,8 @@ jobs:
           FIREBASE_MESSAGING_SENDER_ID: ${{ secrets.FIREBASE_MESSAGING_SENDER_ID }}
           FIREBASE_APP_ID: ${{ secrets.FIREBASE_APP_ID }}
           FIREBASE_MEASUREMENT_ID: ${{ secrets.FIREBASE_MEASUREMENT_ID }}
-      - uses: unsplash/comment-on-pr@master
+      - name: Add comment to PR
+        uses: unsplash/comment-on-pr@master
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         with:
@@ -41,15 +47,15 @@ jobs:
       - name: Checkout
         uses: actions/checkout@v2
       - name: Setup Node.js
-        uses: actions/setup-node@v1
+        uses: actions/setup-node@v2
         with:
           node-version: 16.x
-      - name: Setup Expo
-        uses: expo/expo-github-action@v5
+      - name: Setup Expo and EAS
+        uses: expo/expo-github-action@v7
         with:
-          expo-version: 4.x
-          expo-token: ${{ secrets.EXPO_TOKEN }}
-          expo-cache: true
+          expo-version: 5.x
+          eas-version: latest
+          token: ${{ secrets.EXPO_TOKEN }}
       - name: Install dependencies
         run: npm ci
       - name: Update eas.json ANDROID_OAUTH_CLIENT_ID
@@ -128,11 +134,12 @@ jobs:
         uses: actions/setup-node@v2
         with:
           node-version: 16.x
-      - name: Setup Expo
+      - name: Setup Expo and EAS
         uses: expo/expo-github-action@v7
         with:
           expo-version: 5.x
-          expo-token: ${{ secrets.EXPO_TOKEN }}
+          eas-version: latest
+          token: ${{ secrets.EXPO_TOKEN }}
       - name: Install dependencies
         run: npm ci
       - name: Update eas.json ANDROID_OAUTH_CLIENT_ID
